BugFix (monitor update)